--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-copy": "^1.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-load-plugins": "^1.1.0",
     "gulp-notify": "^3.2.0",
